; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/libs/extr_osd.c_vlclua_osd_message.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/libs/extr_osd.c_vlclua_osd_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VOUT_SPU_CHANNEL_OSD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"top-right\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @vlclua_osd_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlclua_osd_message(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i8* @luaL_checkstring(i32* %8, i32 1)
  store i8* %9, i8** %3, align 8
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @VOUT_SPU_CHANNEL_OSD, align 4
  %12 = call i64 @luaL_optinteger(i32* %10, i32 2, i32 %11)
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %4, align 4
  %14 = load i32*, i32** %2, align 8
  %15 = call i8* @luaL_optstring(i32* %14, i32 3, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  store i8* %15, i8** %5, align 8
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @VLC_TICK_FROM_SEC(i32 1)
  %18 = call i64 @luaL_optinteger(i32* %16, i32 4, i32 %17)
  %19 = trunc i64 %18 to i32
  store i32 %19, i32* %6, align 4
  %20 = load i32*, i32** %2, align 8
  %21 = call i32* @vlclua_get_vout_internal(i32* %20)
  store i32* %21, i32** %7, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %24, label %34

24:                                               ; preds = %1
  %25 = load i32*, i32** %7, align 8
  %26 = load i32, i32* %4, align 4
  %27 = load i8*, i8** %5, align 8
  %28 = call i32 @vlc_osd_position_from_string(i8* %27)
  %29 = load i32, i32* %6, align 4
  %30 = load i8*, i8** %3, align 8
  %31 = call i32 @vout_OSDText(i32* %25, i32 %26, i32 %28, i32 %29, i8* %30)
  %32 = load i32*, i32** %7, align 8
  %33 = call i32 @vout_Release(i32* %32)
  br label %34

34:                                               ; preds = %24, %1
  ret i32 0
}

declare dso_local i8* @luaL_checkstring(i32*, i32) #1

declare dso_local i64 @luaL_optinteger(i32*, i32, i32) #1

declare dso_local i8* @luaL_optstring(i32*, i32, i8*) #1

declare dso_local i32 @VLC_TICK_FROM_SEC(i32) #1

declare dso_local i32* @vlclua_get_vout_internal(i32*) #1

declare dso_local i32 @vout_OSDText(i32*, i32, i32, i32, i8*) #1

declare dso_local i32 @vlc_osd_position_from_string(i8*) #1

declare dso_local i32 @vout_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
